videos play on hover, some spacing fixes

--- a/styles/location_smallscreen.css
+++ b/styles/location_smallscreen.css
@@ -36,7 +36,7 @@ html,body {
 .media_wrapper{
     padding-top: 40px;
     /* margin: 0 15%; */
-    width: 400px;
+    width: 90%;
     margin: auto;
     
 }
